@@ -1,0 +1,40 @@
+language: perl
+perl: 
+  #- "5.32"             # Travis does not support 5.32 at this point...
+  - "5.30"
+  #- "5.28"
+  #- "5.26"
+  #- "5.24"
+  #- "5.22"
+  #- "5.20"
+  #- "5.18"
+  #- "5.16"
+  #- "5.14"
+  #- "5.12"
+  #- "5.10"
+  #- "dev"               # installs latest developer release of perl (e.g. 5.21.8)
+  #- "blead"             # builds perl from git
+
+sudo: false             # faster builds as long as you don't need sudo access
+
+before_install:
+  - export MY_BASE_DIRECTORY=`pwd`
+  - eval $(curl https://travis-perl.github.io/init) --auto
+  - cd ${MY_BASE_DIRECTORY}
+
+  # prevent "please tell me who you are" errors for certain DZIL configs
+  - git config --global user.name "Travis CI"
+
+matrix:
+  allow_failures:
+    - perl: blead       # ignore failures for blead perl
+
+install:
+  # Deal with all the DZIL dependencies, quickly and quietly
+  - cpanm --quiet --notest --skip-satisfied Dist::Zilla  
+  - dzil authordeps --missing | cpanm --quiet --notest --skip-satisfied
+  - dzil listdeps --author --develop --missing | cpanm --notest --skip-satisfied
+  - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
+
+script:
+  - dzil test
