@@ -55,8 +55,8 @@ finder                      = :InstallModules
 
 ;; -- Additional information
 [GithubMeta]                ; Grab the repo metadata
-homepage                    = https://gitlab.dev.localnet/broadworks-api/broadworks-ocip
-repo                        = https://gitlab.dev.localnet/broadworks-api/broadworks-ocip.git
+homepage                    = https://github.com/nigelm/broadworks-ocip
+repo                        = https://github.com/nigelm/broadworks-ocip.git
 [PodWeaver]                 ; Mangle the pod a bit
 [CheckChangeLog]            ; Make sure we have a change set
 [Authority]
@@ -66,7 +66,6 @@ locate_comment              = 1
 
 [@Starter]
 -remove                     = GatherDir         ; we use [Git::GatherDir] instead
--remove                     = UploadToCPAN      ; we are faking it
 
 ; -- Put an autogenerated Markdown readme into the repo
 
@@ -78,7 +77,18 @@ location                    = root              ; do not include pod readmes in 
 [Meta::Contributors]
 #contributor = Fred Flintstone, <fred@bedrock.example.com>
 
-;; -- Maybe we do not actually want to relase to CPAN
-[FakeRelease]
+;; -- Add decoration to the github readme
+[GitHubREADME::Badge]
+badges                      = travis
+;badges                      = coveralls
+;badges                      = gitter
+badges                      = cpants
+badges                      = issues
+badges                      = github_tag
+badges                      = license
+badges                      = version
+;badges                      = codecov
+;badges                      = gitlab_ci
+;badges                      = gitlab_cover
 
 ;; - end
